[package]
name = "nftoken"
version = "0.1.0"
description = "A new, simple NFT standard for Solana"
edition = "2021"
authors = ["Victor pontis <victor@glow.app"]
license = "MIT"
repository = "https://github.com/glow-xyz/nftoken"

[lib]
crate-type = ["cdylib", "lib"]
name = "nftoken"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
arrayref = "0.3.6"
borsh = { version = "0.9", features = ["const-generics"] }
